--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="./app.html">
+            <a class="navbar-brand text-white" href="./index.html">
                 <img src="./img/logo.png" alt="Logo" height="32px" class="d-inline-block align-text-top">
                 - ITD Generator
             </a>
